--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -42,7 +42,7 @@ The code projects associated with this thesis are published as open-source softw
 They are split across the following projects:
 \begin{tight_enumerate}
 	\item
-		NSGT/sliCQT PyTorch copy from sections \ref{sec:improvelib}, \ref{sec:torchgpu}, and \ref{sec:slicqtutil}\\
+		NSGT/sliCQT PyTorch copy from sections \ref{sec:improvelib}, \ref{sec:torchslicq}, and \ref{sec:slicqtutil}\\
 		\url{https://github.com/sevagh/nsgt}
 	\item
 		museval (BSS metrics evaluation) CuPy copy from section \ref{sec:fasterbsscupy}:\\
