--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1672,3 +1672,22 @@ year={2021},
   journal={arXiv preprint arXiv:2111.12203},
   url={https://arxiv.org/abs/2111.12203},
 }
+
+@inproceedings{barkjust2,
+author = {Herrera, Perfecto and Dehamel, Amaury and Gouyon, Fabien},
+year = {2003},
+title = {Automatic labeling of unpitched percussion sounds},
+booktitle = {Proceedings of the 114th Convention of the Audio Engineering Society},
+url = {https://paginas.fe.up.pt/~ee97138/AES114-Herrera2003.pdf}
+}
+
+@article{barkjust1,
+author = {Litvin, Yevgeni and Cohen, Israel},
+year = {2011},
+volume = {65},
+pages = {339--350},
+title = {Single-channel source separation of audio signals using Bark scale wavelet packet decomposition},
+journal = {Journal of Signal Processing Systems},
+doi={10.1007/s11265-010-0510-9},
+}
+
