--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -535,7 +535,7 @@ Both \textcite{variableq1} and \textcite{variableq2} cite the ERBlet transform \
 
 The effect is to widen the bandwidths of the windows at the low frequency bins significantly, since the offset is comparable in its order of magnitude to the lower frequency bandwidths. \textcite{variableq1} show some examples with $\gamma = [0, 3, 6.6, 10, 30] \text{ Hz}$. As the center frequency increases, the effect of the small offset becomes negligible. This results in a widening of the Q-factors in the low frequency bins, but it becomes Constant-Q in the high frequency bins. 
 
-The Bark psychoacoustic scale to complement the included mel scale\todo{justify why you like this scale - audio applications}. We can use one of the possible formulas used to convert between Bark and Hz frequencies \parencite{barktan} and vice versa, sometimes colloquially called the ``Barktan formula''\footnote{\url{https://ccrma.stanford.edu/~jos/bbt/Optimal_Frequency_Warpings.html}}, shown in equation \eqref{equation:barktan}:
+The Bark psychoacoustic scale to complement the included mel scale, because the Bark scale has been used with success in music source separation \parencite{barkjust1} and in percussion instrument classification \parencite{barkjust2}. We can use one of the possible formulas used to convert between Bark and Hz frequencies \parencite{barktan} and vice versa, sometimes colloquially called the ``Barktan formula''\footnote{\url{https://ccrma.stanford.edu/~jos/bbt/Optimal_Frequency_Warpings.html}}, shown in equation \eqref{equation:barktan}:
 \begin{align}\tag{26}\label{equation:barktan}
 	\nonumber & f_{\text{Bark}} = 6 \cdot arcsinh \Big(\frac{f_{\text{Hz}}}{600}\Big), f_{\text{Hz}} = 600 \cdot sinh \Big(\frac{f_{\text{Bark}}}{6}\Big)
 \end{align}
@@ -906,27 +906,16 @@ Spectrogram factorization models are more sophisticated than KAM, and the most p
 
 A simple case of music source separation is harmonic/percussive source separation \parencite{musicsepgood}. Harmonic (or steady-state, or tonal) sounds are narrowband and steady in time, while percussive (or transient) sounds are broadband and have a fast decay. \textcite{fitzgerald1} noted that they appear as horizontal and vertical lines respectively in the STFT, and applied a median filter in the vertical and horizontal directions to estimate the harmonic and percussive components. This is a form of KAM (kernel additive modelling) algorithm.
 
-Median filtering is a technique for image processing where a pixel is replaced by the median value of its neighbors in a window, or filter, which slides across all pixels. Applying a median filter shaped like a horizontal rectangle (i.e., stretching in time) to the STFT causes vertical (or percussive) features to be diminished since their neighboring pixels are empty, which preserves horizontal (or harmonic) features. Similarly, applying a median filter shaped like a vertical rectangle (i.e., stretching in frequency) causes horizontal (or harmonic) features to be diminished, which preserves vertical (or percussive) features. From these estimates, soft masks are computed which are applied to the original STFT and inverted to create the estimated harmonic and percussive signals. The median filters are shown in Figure \ref{fig:fitz1}.
+Median filtering is a technique for image processing where a pixel is replaced by the median value of its neighbors in a window, or filter, which slides across all pixels. Applying a median filter shaped like a horizontal rectangle (i.e., stretching in time) to the STFT causes vertical (or percussive) features to be diminished since their neighboring pixels are empty, which preserves horizontal (or harmonic) features. Similarly, applying a median filter shaped like a vertical rectangle (i.e., stretching in frequency) causes horizontal (or harmonic) features to be diminished, which preserves vertical (or percussive) features. From these estimates, soft masks are computed which are applied to the original STFT and inverted to create the estimated harmonic and percussive signals. \textcite{driedger} replaced the soft mask with a binary/hard mask, which allows for estimation of a third component, the residual, which is neither harmonic nor percussive, described in further detail in section \ref{sec:masksandoracles}.
 
-\todo[inline]{put a mixed spectrogram here}
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=0.675\textwidth]{./images-hpss/mix_stft_medianfilters.png}
-	\caption{Median filtering HPSS with binary masking applied to the glockenspiel signal}
-	\label{fig:fitz1}
-\end{figure}
-
- 
-\textcite{driedger} replaced the soft mask with a binary/hard mask, which allows for estimation of a third component, the residual, which is neither harmonic nor percussive, described in further detail in section \ref{sec:masksandoracles}. The results of binary-masked median-filtering harmonic/percussive source separation is shown in Figure \ref{fig:fitz12}.
-
-\todo[inline]{put a mixed spectrogram here}
+The entire process of median-filtering harmonic/percussive source separation with binary masks applied to the spectrogram of the glockenspiel signal is shown in Figure \ref{fig:fitz12}.
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Percussive estimate]{{\includegraphics[width=0.675\textwidth]{./images-hpss/perc_stft.png} }}\\
-	\subfloat[Harmonic estimate]{{\includegraphics[width=0.675\textwidth]{./images-hpss/harm_stft.png} }}\\
-	\subfloat[Residual estimate]{{\includegraphics[width=0.675\textwidth]{./images-hpss/resi_stft.png} }}
+	\subfloat[Median filters applied to the STFT spectrogram]{{\includegraphics[width=0.5\textwidth]{./images-hpss/mix_stft_medianfilters.png}} }
+	\subfloat[Percussive estimate]{{\includegraphics[width=0.5\textwidth]{./images-hpss/perc_stft.png} }}\\
+	\subfloat[Harmonic estimate]{{\includegraphics[width=0.5\textwidth]{./images-hpss/harm_stft.png} }}
+	\subfloat[Residual estimate]{{\includegraphics[width=0.5\textwidth]{./images-hpss/resi_stft.png} }}
 	\caption{Outputs median filtering HPSS with binary masking applied to the glockenspiel signal}
 	\label{fig:fitz12}
 \end{figure}
@@ -1064,22 +1053,22 @@ We start by denoting the waveforms $x_{v}[n]$ and $x_{d}[n]$ for the isolated vo
 
 We seek to calculate various interesting oracle masks from the STFTs of the mix and two sources shown in equations \eqref{equation:targetstfts}:
 \begin{align}\tag{19}\label{equation:targetstfts}
-	\nonumber X_{m} &= \text{STFT}(x_{m}[n])\\
-	\nonumber X_{v} &= \text{STFT}(x_{v}[n])\\
-	\nonumber X_{d} &= \text{STFT}(x_{d}[n])
+	\nonumber X_{m} &= \mathit{STFT}(x_{m}[n])\\
+	\nonumber X_{v} &= \mathit{STFT}(x_{v}[n])\\
+	\nonumber X_{d} &= \mathit{STFT}(x_{d}[n])
 \end{align}
  
 \textcite{sisec2018} report the performance of five oracles, called IRM1, IRM2, IBM1, IBM2, and the MWF (multichannel Wiener filter). The first four are more relevant to stereo music, which is the case considered in this thesis. The ``I'' is for Ideal, ``R|B'' denotes a Ratio vs. Binary mask, ``M'' is for Mask, and the trailing number is the $p$th power which the magnitude spectrogram is raised to. For example, the magnitude spectrogram raised to the first power remains unchanged, while one raised to the second power is the power spectrogram.
 
 The oracles for the vocal source (and the same equations apply to the drum track) are computed from equations \eqref{equation:vocaloracles}, noting that a typical default value for $\theta$ is 0.5:
 \begin{align}\tag{20}\label{equation:vocaloracles}
-	\nonumber \text{IRM1}_{v} &= \frac{|X_{v}|^{1}}{|X_{m}|^{1}}\text{,\qquad}
-	\nonumber \text{IRM2}_{v} = \frac{|X_{v}|^{2}}{|X_{m}|^{2}}\\
-	\nonumber \text{IBM1}_{v} &= \begin{cases}
+	\nonumber \mathit{IRM1}_{v} &= \frac{|X_{v}|^{1}}{|X_{m}|^{1}}\text{,\qquad}
+	\nonumber \mathit{IRM2}_{v} = \frac{|X_{v}|^{2}}{|X_{m}|^{2}}\\
+	\nonumber \mathit{IBM1}_{v} &= \begin{cases}
 		0 \text{ where } \frac{|X_{v}|^{1}}{|X_{m}|^{1}} < \theta\\
 		1 \text{ where } \frac{|X_{v}|^{1}}{|X_{m}|^{1}} \ge \theta
 	\end{cases},
-	\nonumber \text{IBM2}_{v} = \begin{cases}
+	\nonumber \mathit{IBM2}_{v} = \begin{cases}
 		0 \text{ where } \frac{|X_{v}|^{2}}{|X_{m}|^{2}} < \theta\\
 		1 \text{ where } \frac{|X_{v}|^{2}}{|X_{m}|^{2}} \ge \theta
 	\end{cases}
@@ -1087,7 +1076,7 @@ The oracles for the vocal source (and the same equations apply to the drum track
 
 To estimate the time domain waveform from an oracle mask, the complex STFT of the mixed waveform, $X_{m}$, is multiplied by the mask, and the resultant complex STFT is inverted back to the time-domain waveform using equation \eqref{equation:cplxinvert}:
 \begin{align}\tag{21}\label{equation:cplxinvert}
-	\nonumber \hat{X}_{v\text{, IRM1}} &= X_{m} \cdot \text{IRM1}_{v}, \hat{x}_{v\text{, IRM1}} = \text{iSTFT}(\hat{X}_{v\text{, IRM1}})
+	\nonumber \hat{X}_{v\text{, IRM1}} &= X_{m} \cdot \text{IRM1}_{v}, \hat{x}_{v\text{, IRM1}} = \mathit{iSTFT}(\hat{X}_{v\text{, IRM1}})
 \end{align}
 
 \subsubsection{Noisy phase or mix-phase inversion (MPI)}
@@ -1099,20 +1088,20 @@ In demixing or source separation literature, this strategy is referred to as the
 
 Equations \eqref{equation:mpineural} show how the phase of the mixture and magnitude of the estimated source are used to create a waveform by some arbitrary music demixing system:
 \begin{align}\tag{29}\label{equation:mpineural}
-	\nonumber & X_{\text{mix}} = \text{STFT}(x_{\text{mix}}[n])\\
-	\nonumber & {|X_{\text{source}}|}_{\text{est}} = \text{MusicDemixingSystem}(x_{\text{mix}})\\
+	\nonumber & X_{\text{mix}} = \mathit{STFT}(x_{\text{mix}}[n])\\
+	\nonumber & {|X_{\text{source}}|}_{\text{est}} = \mathit{MusicDemixingSystem}(x_{\text{mix}})\\
 	\nonumber & X_{\text{source, est}} = {|X_{\text{source}}|}_{\text{est}} \cdot \angle{X_{\text{mix}}}\\
-	\nonumber & \hat{x}_{\text{source, est}}[n] = \text{iSTFT}(\hat{X}_{\text{source, est}})
+	\nonumber & \hat{x}_{\text{source, est}}[n] = \mathit{iSTFT}(\hat{X}_{\text{source, est}})
 \end{align}
 
 In other words, the magnitude of the isolated source is combined with the phase, or the angle, of the mixed waveform, to produce a complex time-frequency transform, which is then inverted with the backward transform to obtain the estimated isolated source waveform. 
 
 Let us write out the equations for an MPI oracle, derived from equations \eqref{equation:mpineural}. The MPI oracle can be computed from ground-truth data, using equations \eqref{equation:mpioracle}:
 \begin{align}\tag{30}\label{equation:mpioracle}
-	\nonumber & X_{\text{mix}} = \text{STFT}(x_{\text{mix}}[n])\\
-	\nonumber & X_{\text{source}} = \text{STFT}(x_{\text{source}}[n])\\
+	\nonumber & X_{\text{mix}} = \mathit{STFT}(x_{\text{mix}}[n])\\
+	\nonumber & X_{\text{source}} = \mathit{STFT}(x_{\text{source}}[n])\\
 	\nonumber & \hat{X}_{\text{source, MPI}} = |X_{\text{source}}| \cdot \angle{X_{\text{mix}}}\\
-	\nonumber & \hat{x}_{\text{source, MPI}}[n] = \text{iSTFT}(\hat{X}_{\text{source, MPI}})
+	\nonumber & \hat{x}_{\text{source, MPI}}[n] = \mathit{iSTFT}(\hat{X}_{\text{source, MPI}})
 \end{align}
 
 This is the first estimate of the mix-phase inversion strategy, and does not assume further post-processing of the estimates. It gives us the idea of the performance of a time-frequency transform of an isolated source when the phase is discarded and the magnitude is combined with the phase of the mixture.
@@ -1121,7 +1110,9 @@ This is the first estimate of the mix-phase inversion strategy, and does not ass
 
 The most popular music stem dataset used by SISEC and SigSep is the MUSDB18 dataset \parencite{musdb18}, and more recently the HQ (high-quality) version \parencite{musdb18hq}. MUSDB18-HQ contains stereo wav files sampled at 44,100 Hz representing stems (drum, vocal, bass, and other) from a collection of permissively licensed music, specifically intended for recording, mastering, mixing (and in this case, ``de-mixing'', or source separation) research. It combines earlier mixing/demixing datasets \parencite{sisec2016, otherdataset2}.
 
-The songs in the MUSDB18-HQ dataset have a fixed train, validation, and test split.\todo{hardcoded to blah blah} Following the rules defined in the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} for a network to be considered trained only on MUSDB18-HQ, the predefined data splits must be used.
+The MUSDB18-HQ dataset has fixed train, validation, and test splits. The dataset is organized into \Verb#train# and \Verb#test# folders, and a list of 14 tracks from the training folder are defined to be the validation set by the Python MUSDB18-HQ loader library.\footnote{https://github.com/sigsep/sigsep-mus-db}
+
+Following the rules defined in the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} for a network to be considered trained only on MUSDB18-HQ, the predefined data splits must be used.
 
 \subsubsection{Evaluation measures}
 \label{sec:evalbss}
@@ -1141,13 +1132,13 @@ The SigSep\footnote{\url{https://sigsep.github.io/}} community, borrowing from t
 
 Out of these four scores, SDR is the single global score which is commonly used to summarize the overall performance of a music demixing system \parencite{sdruseful}. The SDR as it was defined in the ISMIR 2021 Music Demixing Challenge (and used to rank the participants) can be computed from equation \eqref{equation:sdrinstr}:
 \begin{align}
-	\nonumber & \text{SDR}_{\text{instr}} = \\
+	\nonumber & \mathit{SDR}_{\text{instr}} = \\
 	&10 \log_{10}\frac{\sum_{n}\big(s_{\text{instr, left}}(n)\big)^{2} + \sum_{n}\big(s_{\text{instr, right}}(n)\big)^{2}}{\sum_{n}\big(s_{\text{instr, left}}(n) - \hat{s}_{\text{instr, left}}(n)\big)^{2} + \sum_{n}\big(s_{\text{instr, right}}(n) - \hat{s}_{\text{instr, right}}(n)\big)^{2}} \tag{22}\label{equation:sdrinstr}
 \end{align}
 
 The unit of the SDR score is in decibels or dB, $s_{\text{instr}}(n)$ denotes the ground truth waveform of the instrument, $\hat{s}_{\text{instr}}(n)$ is the estimate, and left and right refer to the two channels in the stereo dataset of MUSDB18-HQ. Given the four stems of MUSDB18-HQ -- vocals, drums, bass, other -- the SDR is computed for each stem from equation \eqref{equation:sdrinstr} above. Then, the four SDR scores are combined for a total song score in equation \eqref{equation:sdrsong}:
 \begin{align}
-	\text{SDR}_{\text{song}} = \frac{1}{4}(\text{SDR}_{\text{bass}} + \text{SDR}_{\text{drums}} + \text{SDR}_{\text{vocals}} + \text{SDR}_{\text{other}}) \tag{23}\label{equation:sdrsong}
+	\mathit{SDR}_{\text{song}} = \frac{1}{4}(\mathit{SDR}_{\text{bass}} + \mathit{SDR}_{\text{drums}} + \mathit{SDR}_{\text{vocals}} + \mathit{SDR}_{\text{other}}) \tag{23}\label{equation:sdrsong}
 \end{align}
 
 In the 2018 Signal Source Separation Evaluation Compaign (SiSEC), \textcite{sisec2018} introduced an evolution of BSS metrics, called BSS v4. BSS v4 uses time-invariant distortion filters to reduce the computational cost over the original BSS metrics used in SiSec 2016 \parencite{sisec2016}. The new BSS v4 metrics were also made available in the Python libraries museval\footnote{\url{https://github.com/sigsep/museval}} and bsseval,\footnote{\url{https://github.com/sigsep/bsseval}} which were used to calculate the results in this thesis.
@@ -1159,93 +1150,120 @@ There are several groups of researchers who created open-source ecosystems on th
 \subsubsection{Open-Unmix (UMX)}
 \label{sec:umx}
 
-\todo[inline]{REVIEW THIS, ITS MASHED TOGETHER}
+Open-Unmix (UMX) was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music source separation. UMX is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18 dataset for training data \parencite{musdb18, musdb18hq}.
 
-Open-Unmix (UMX) was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music source separation. Open-Unmix is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18 dataset for training data \parencite{musdb18, musdb18hq}.
+UMX has a reference implementation released as an open-source Python project,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} which uses PyTorch \parencite{pytorch} for GPU-accelerated numerical computation and deep learning, and includes a MUSDB18-HQ data loader \parencite{musdb18hq} and BSS metrics evaluator \parencite{bss}.
 
-Open-Unmix \parencite{umx} has a reference implementation released as an open-source Python project,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} which uses PyTorch \parencite{pytorch} for GPU-accelerated numerical computation and deep learning, and includes a MUSDB18-HQ data loader \parencite{musdb18hq} and BSS metrics evaluator \parencite{bss}.
-
-In UMX, a deep neural network (DNN) is used to estimate the magnitude spectrograms of the sources from an input mixed song. The architecture of the DNN is a variant of a sequence2sequence model. Open-Unmix uses a bidirectional LSTM or Bi-LSTM architecture, which is based on two predecessor networks by \textcite{umxorig1} and \textcite{umxorig2}. Figure \ref{fig:umxes} shows the architecture of UMX and one of its predecessors.
+In UMX, a deep neural network (DNN) is used to estimate the magnitude spectrograms of the sources from an input mixed song. The architecture of the DNN is a variant of a sequence2sequence model. UMX uses a bidirectional LSTM or Bi-LSTM architecture, which is based on two predecessor networks by \textcite{umxorig1} and \textcite{umxorig2}. Figure \ref{fig:umxes} shows the architecture of UMX and one of its predecessors.
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Open-Unmix Bi-LSTM architecture\protect\footnotemark]{\includegraphics[width=\textwidth]{./images-neural/umx.png}}\\
+	\subfloat[UMX Bi-LSTM architecture\protect\footnotemark]{\includegraphics[width=\textwidth]{./images-neural/umx.png}}\\
 	\subfloat[Simple DNN architecture for MSS {\parencite[262]{umxorig1}}]{\includegraphics[width=\textwidth]{./images-neural/typical_simple_mss_dnn.png}}
-	\caption{Architecture of Open-Unmix and one of its simpler predecessors}
+	\caption{Architecture of UMX and one of its simpler predecessors}
 	\label{fig:umxes}
 \end{figure}
 
 \footnotetext{\url{https://github.com/sigsep/open-unmix-pytorch\#-the-model-for-one-source}}
 
-The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. Also, the returned estimate of Open-Unmix is the estimated source waveform $\hat{y}$. However, during most of the steps between the loading of the time-domain waveforms and the return of the estimated time-domain waveform, the STFT is used to transform the audio into the time-frequency or spectral domain.
+The MUSDDB18-HQ data loader is the starting point of the neural network, and it returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. The final output of UMX is $\hat{y}$, the estimated target waveform. In between the input and output time-domain waveforms, the magnitude STFT domain is used by UMX. The important training and inference steps are as follows.
 
-The MUSDDB18-HQ data loader is the starting point of the neural network, and the important training and inference steps are as follows:
+Before the training of the neural network, the mixed waveforms of the training set $\{x\}_{\text{train}}$ have their magnitude STFTs taken, $\{|X|\}_{\text{train}}$. These are used to compute the mean and standard deviation, or $\mathit{mean}(\{|X|\}_{\text{train}})$ and $\mathit{std}(\{|X|\}_{\text{train}})$. This is to perform data whitening, which \citeauthor{Kessy_2018} describes as a process that ``greatly simplifies multivariate data analysis both from a computational and a statistical standpoint,'' and that ``whitening is a critically important tool, most often employed in preprocessing'' \parencite[309]{Kessy_2018}.
 
-\begin{tight_enumerate}
-	\item
-		The data loader is instantiated,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L222}} ready to return $(x, y)$ pairs of waveforms for every training example.
-	\item
-		The \Verb#get_statistics#\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L56}} function is applied, which computes the mean and standard deviation from the magnitude STFTs of the entire training dataset. \citeauthor{Kessy_2018} describes data whitening as a process that ``greatly simplifies multivariate data analysis both from a computational and a statistical standpoint,'' and that ``whitening is a critically important tool, most often employed in preprocessing'' \parencite[309]{Kessy_2018}.
-	\item
-		The $(x, y)$ pairs have their magnitude STFT taken in the training loop.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L23}} The magnitude STFTs, denoted $(|X|, |Y|)$ are passed into the inner neural network. $|X|$ is modified with $|X| = \text{std}*(|X|+\text{mean})$, where the std and mean are from the data whitening step.
-	\item
-		The whitened $|X|$ is used as an input to the neural network layers, which as mentioned in section \ref{sec:umx} is a bi-directional LSTM.
-	\item
-		The estimate of the neural network is $|\hat{Y}|$. The loss function is $\text{MSE}(|Y|, |\hat{Y}|)$, and this is used as the optimization target for the parameter updates.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L34}}
-	\item
-		This process is repeated until the network is fully trained (i.e. the loss stops improving), and four independent networks are each trained on the four MUSDB18-HQ sources (vocals, drums, bass, other) respectively.
-	\item
-		The inference step of the neural network is when Open-Unmix loads all four independently trained networks to create time-domain estimates of the sources.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/model.py\#L258}}
-	\item
-		For a given mixed waveform $x$, Open-Unmix estimates $|Y_{1}|, |Y_{2}|, |Y_{3}|, |Y_{4}|$ for each source. Then, a process called Wiener filtering and expectation-maximization (EM) is applied \parencite{umxorig1, wiener2, wiener3, wiener4}.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/filtering.py\#L338}} First the mix-phase inversion is used to come up with the first waveform estimate $y_{1}, y_{2}, y_{3}, y_{4}$. Then, the iterative Wiener expectation-maximization (Wiener-EM) process uses the four target STFT spectrograms in an iterative procedure to refine the estimates.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/filtering.py\#L154}}
-\end{tight_enumerate}
+In the training loop, the $(x, y)$ pairs of mixed audio and the ground-truth of the target source waveform are converted to the magnitude STFT domain $(|X|, |Y|)$. The data whitening from the previous step is applied to the input mixed magnitude spectrogram $|X|$, to use $(|X|+\mathit{mean}(\{|X|\}_{\text{train}}))\times\mathit{std}(\{|X|\}_{\text{train}})$ as the input to the Bi-LSTM neural network. The Bi-LSTM neural network outputs $|\hat{Y}|$, the estimated magnitude STFT of the target sources.
 
-The STFT is used to compute magnitude spectrogram statistics from the training data. The magnitude STFT of the training waveform $x$ is taken and passed as an input to the bi-directional LSTM. Then, the output estimated magnitude STFT from the four target models are considered together to perform an iterative Wiener-EM refinement step in the STFT domain. Finally, the estimates are transformed into time-domain waveforms with the iSTFT and the mix-phase inversion.
-
-\subsubsection{CrossNet-Open-Unmix (X-UMX)}
-\label{sec:xumx}
-
-\todo[inline]{REVIEW THIS, ITS MASHED TOGETHER}
-
-\textcite{xumx} combined the four separate target networks into a single model to apply the loss functions and optimizations jointly across all four targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients.
-
-CrossNet-Open-Unmix (X-UMX) \parencite{xumx} is a further development on Open-Unmix which improves the music demixing performance without adding any additional trainable parameters. All four target models are trained simultaneously instead of separately, which allows for loss functions that consider multiple targets. However, it requires more compute resources for training, since the GPU needs to store and train four independent target models simultaneously instead of separately.
-
-In Open-Unmix, the loss function is only for the single target being trained, and only applied by the mean squared error (MSE) function on the magnitude STFT coefficients, making it a loss of the frequency domain. The MSE loss of the magnitude STFT is computed from equation \eqref{equation:mselossstft}, where $Y$ represents the ground truth magnitude STFT, $\hat{Y}$ represents the network estimate, and there are $n$ total elements in the STFT matrix:
+The loss function is the mean-squared error (MSE) function. In the loss function, the estimated magnitude STFT of the target source is compared to the ground-truth, shown in equation \eqref{equation:mselossstft}.
 \begin{align}\tag{31}\label{equation:mselossstft}
-	\nonumber & \text{MSE}(Y, \hat{Y}) = \frac{1}{n} \sum_{i = 1}^{n}{(Y_{i}-\hat{Y}_{i}^{2}})
+	\nonumber & \mathit{MSE}(Y, \hat{Y}) = \frac{1}{n} \sum_{i = 1}^{n}{(Y_{i}-\hat{Y}_{i})^{2}}
 \end{align}
 
-The loss function of X-UMX is first modified to include a multi-domain loss (MDL), which refers to the existing frequency-domain loss (spectrogram MSE) in addition to a new time-domain loss. The time-domain loss is in fact the SDR score from the BSS metrics which we have seen before. Equations \eqref{equation:mpirepeat} show how the magnitude STFT of the Open-Unmix neural network is converted back to the time-domain waveform estimate for a target (or source):
+, where $n$ is the number of elements in the magnitude STFT matrix.
+
+There are four independent Bi-LSTM neural networks for each of the four sources: vocals, bass, drums, and other. The four Bi-LSTM models are trained until the loss stops improving. At this point, UMX is ready to perform inference.
+
+First, the four independently-trained Bi-LSTM models are used to obtain the estimated magnitude STFTs of the four target sources. The mix phase inversion is used to create a first estimate the waveforms for the four targets. Equations \eqref{equation:mpirepeat} show how the estimated magnitude STFT of UMX Bi-LSTM is converted to the time-domain waveform estimate:
+
 \begin{align}\tag{32}\label{equation:mpirepeat}
-	\nonumber & X_{\text{mix}} = \text{STFT}(x_{\text{mix}}[n])\\
-	\nonumber & {|X_{\text{source}}|}_{\text{est}} = \text{Open-Unmix}(x_{\text{mix}})\\
+	\nonumber & X_{\text{mix}} = \mathit{STFT}(x_{\text{mix}}[n])\\
+	\nonumber & {|X_{\text{source}}|}_{\text{est}} = \mathit{UMX}(x_{\text{mix}})\\
 	\nonumber & X_{\text{source, est}} = {|X_{\text{source}}|}_{\text{est}} \cdot \angle{X_{\text{mix}}}\\
-	\nonumber & \hat{x}_{\text{source, est}}[n] = \text{iSTFT}(\hat{X}_{\text{source, est}})
+	\nonumber & \hat{x}_{\text{source, est}}[n] = \mathit{iSTFT}(\hat{X}_{\text{source, est}})
 \end{align}
 
 Similar equations were previously described for the mix-phase inversion (MPI) oracle in section \ref{sec:noisyphaseoracle}.
 
-We can use these equations in the loss function to convert from the estimated magnitude spectrogram of the neural network to the waveform estimate. In xumx-sliCQ, we use the auraloss Python package,\footnote{\url{https://github.com/csteinmetz1/auraloss}} which implements the SI-SDR (scale-invariant SDR) \parencite{roux2018sdr} loss function for time-domain audio waveforms. SI-SDR is a simpler and more robust variant of SDR which improves on some failure cases of SDR \parencite{roux2018sdr}.
+Finally, the four estimated magnitude STFTs are considered together, along with the phase of the STFT of the original mixed audio, to perform a post-processing step called iterative Wiener filtering and expectation-maximization (EM), jointly referred to as ``Wiener-EM'' \parencite{umxorig1, wiener2, wiener3, wiener4}. The output of the Wiener-EM step is a refined estimate of the waveforms of the four target sources, which is the final output of UMX.
 
-We will call this one $\text{sdr\_loss}$ to denote time-domain loss which is applied to waveforms $x$ and $\hat{x}$ (the ground-truth and estimated waveform respectively). The SI-SDR loss is shown in equation \eqref{equation:sisdr}:
-\begin{align}
-	& \text{SI-SDR}(x, \hat{x}) = 10 \log_{10}\Big(\frac{||\frac{\hat{x}^{T}x}{||x||^{2}} x||^{2}}{||\frac{\hat{x}^{T}x}{||x||^{2}} x - \hat{x}||^{2}}\Big)\tag{33}\label{equation:sisdr}
-\end{align}
+\subsubsection{CrossNet-Open-Unmix (X-UMX)}
+\label{sec:xumx}
 
-There are 14 MSE loss combinations made from the four targets to implement the combination loss (CL). In the spectral/frequency domain, we will use $\text{mse\_loss}$ as shorthand for frequency-domain loss. Equations \eqref{equation:cl} show the computation of the total frequency-domain loss, where $x$ represents the time-domain waveform, the subscript represents the target (1--4 for vocals, drums, bass, and other):
+\textcite{xumx} improved on UMX without introducing any additional parameters. They combined the four separate target networks into a single model to apply the loss functions and optimizations jointly across all four targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients.
+
+The loss function of X-UMX is first modified to include a multi-domain loss (MDL), which includes the existing frequency-domain loss (spectrogram MSE) in addition to a new time-domain loss. The time-domain loss is in fact the SDR score from the BSS metrics which we have seen before.
+
+We showed in equation \ref{equation:mpirepeat} how to convert from the estimated magnitude spectrogram of the neural network to the waveform estimate. In X-UMX, these equations are used to compute the time-domain waveforms and apply the SDR loss function.
+
+The next addition to the loss function of X-UMX is the combination loss (CL), which considers 14 possible combinations of the four target sources (vocals, drums, bass, other) in both the spectral MSE loss and time-domain SDR loss. The 14 combinations are shown in Table \ref{table:14targets}.
+
+\begin{table}[ht]
+	\centering
+	\caption{14 combinations of the four targets in X-UMX}
+	\label{table:14targets}
+	\begin{tabular}{ |l|l|l| }
+	 \hline
+		Combination size & Combination number & Targets \\
+	 \hline
+	 \hline
+	 	1 & 1 & bass \\
+	 \hline
+	 	1 & 2 & vocals \\
+	 \hline
+	 	1 & 3 & other \\
+	 \hline
+	 	1 & 4 & drums \\
+	 \hline
+	 	2 & 5 & bass + vocals \\
+	 \hline
+	 	2 & 6 & bass + other \\
+	 \hline
+	 	2 & 7 & bass + drums \\
+	 \hline
+	 	2 & 8 & vocals + other \\
+	 \hline
+	 	2 & 9 & vocals + drums \\
+	 \hline
+	 	2 & 10 & other + drums \\
+	 \hline
+	 	3 & 11 & bass + vocals + other \\
+	 \hline
+	 	3 & 12 & bass + vocals + drums \\
+	 \hline
+	 	3 & 13 & bass + other + drums \\
+	 \hline
+	 	3 & 14 & vocals + other + drums \\
+	 \hline
+\end{tabular}
+\end{table}
+
+Equations \eqref{equation:cl} show the computation of the total frequency-domain loss from the 14 combinations, where $|Y|$ represents the magnitude spectrogram of the ground-truth target waveform, and $\hat{|Y|}$ represents the estimated magnitude spectrogram of the neural network. The subscript of $|Y|$ and $|\hat{Y}|$ represents the target (1--4 for vocals, drums, bass, and other):
 \begin{align}\tag{34}\label{equation:cl}
-	\nonumber & \text{mse\_loss}_{1} = \text{MSE}(|\text{STFT}(\hat{x}_{1})|, |\text{STFT}(x_{1})|)\\
-	\nonumber & \text{mse\_loss}_{2} = \text{MSE}(|\text{STFT}(\hat{x}_{1} + \hat{x}_{2})|, |\text{STFT}(x_{1} + x_{2})|)\\
-	\nonumber & \text{(... repeat for 14 combinations)}\\
+	\nonumber & \text{mse\_loss}_{1} = \mathit{MSE}(\hat{|Y|}_{1}, |Y|_{1})\\
+	\nonumber & \text{(... repeat for size-1 combinations)}\\
+	\nonumber & \text{mse\_loss}_{5} = \mathit{MSE}(\hat{|Y|}_{1} + \hat{|Y|}_{2}, |Y|_{1} + |Y|_{2})\\
+	\nonumber & \text{(... repeat for size-2 combinations)}\\
+	\nonumber & \text{mse\_loss}_{11} = \mathit{MSE}(\hat{|Y|}_{1} + \hat{|Y|}_{2} + \hat{|Y|}_{3}, |Y|_{1} + |Y|_{2} + |Y|_{3})\\
+	\nonumber & \text{(... repeat for size-3 combinations)}\\
 	\nonumber & \text{mse\_loss}_{\text{total}} = \frac{1}{14} \cdot \sum_{n = 1}^{14}{\text{mse\_loss}_{n}}
 \end{align}
 
-For the time-domain loss, the same 14 combinations of the combination targets are considered, shown in the equations \eqref{equation:mdl}, where $x$ represents the time-domain waveform, the subscript represents the target:
+For the time-domain loss, the same 14 combinations are considered in the time-domain, using the ground-truth time-domain waveforms $y$ and the estimated time-domain waveform $\hat{y}$ from the mix-phase inversion, shown in the equations \eqref{equation:mdl}:
 \begin{align}\tag{35}\label{equation:mdl}
-	\nonumber & \text{sdr\_loss}_{1} = \text{SI-SDR}(\hat{x}_{1}, x_{1})\\
-	\nonumber & \text{sdr\_loss}_{2} = \text{SI-SDR}(\hat{x}_{1} + \hat{x}_{2}, x_{1} + x_{2})\\
-	\nonumber & \text{(... repeat for 14 combinations)}\\
+	\nonumber & \text{sdr\_loss}_{1} = \mathit{SDR}(\hat{y}_{1}, y_{1})\\
+	\nonumber & \text{(... repeat for size-1 combinations)}\\
+	\nonumber & \text{sdr\_loss}_{5} = \mathit{SDR}(\hat{y}_{1} + \hat{y}_{2}, y_{1} + y_{2})\\
+	\nonumber & \text{(... repeat for size-2 combinations)}\\
+	\nonumber & \text{sdr\_loss}_{11} = \mathit{SDR}(\hat{y}_{1} + \hat{y}_{2} + \hat{y}_{3}, y_{1} + y_{2} + y_{3})\\
+	\nonumber & \text{(... repeat for size-3 combinations)}\\
 	\nonumber & \text{sdr\_loss}_{\text{total}} = \frac{1}{14} \cdot \sum_{n = 1}^{14}{\text{sdr\_loss}_{n}}
 \end{align}
 
